@@ -1289,7 +1289,6 @@ public abstract class AbstractFullDistribZkTestBase extends AbstractDistribZkTes
   
   protected boolean compareResults(long controlDocs, long cloudClientDocs, Set<String> addFails, Set<String> deleteFails)
       throws SolrServerException {
-    boolean shouldFail = false;
     SolrParams q;
     SolrDocumentList controlDocList;
     SolrDocumentList cloudDocList;
@@ -1338,7 +1337,7 @@ public abstract class AbstractFullDistribZkTestBase extends AbstractDistribZkTes
       log.error("controlClient :" + a + "\n\tcloudClient :" + b);
     }
     
-    return shouldFail;
+    return true;
   }
   
   protected SolrServer getClient(String nodeName) {
@@ -1653,7 +1652,6 @@ public abstract class AbstractFullDistribZkTestBase extends AbstractDistribZkTes
       SolrServer server = createNewSolrServer("", baseUrl);
       try {
         res.setResponse(server.request(request));
-        server.shutdown();
       } finally {
         if (server != null) server.shutdown();
       }
